header, navigation and event blocks

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,258 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="images/logo.svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body id="home">
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__wrapper">
+          <img
+            class="header__burger"
+            src="./images/burger-icon.svg"
+            alt="Menu"
+          >
+
+          <a href="#" class="header__logo logo">
+            <img
+              class="logo__img"
+              src="./images/logo.svg"
+              alt="Logo"
+            >
+          </a>
+
+          <div class="header__events">події</div>
+        </div>
+
+        <nav class="header__nav nav">
+          <div class="nav__container container">
+            <img
+              class="nav__close"
+              src="images/close-icon.svg"
+              alt="close"
+            >
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+            <a href ="#" class="nav__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo-white.svg"
+                alt="logo"
+                width="35"
+                height="42"
+              >
+            </a>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main-page">
+      <section class="main-page__promo promo">
+        <img
+          src="./images/promo-bg.png"
+          alt="Museum"
+          class="promo__img"
+          width="320"
+          height="300"
+        >
+
+        <div class="promo__container">
+          <h1 class="promo__title main-title">
+            Худож<span class="main-title__part">ній</span> Музей
+          </h1>
+
+          <div class="promo__button">
+            <a
+              href="#"
+              class="promo__link"
+            >
+              Квитки
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="main-page__events events" id="events">
+        <div class="events__container container">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--left">
+              <a href="#" class="event__photo event__photo--left">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="./images/event1-desktopL.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="./images/event1-desktop.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="./images/event1-tablet.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="./images/event1-mobile.jpg"
+                    alt="Фотографія події"
+                  >
+                </picture>
+              </a>
+
+              <div class="event__info event__info--left">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    Йду і повертаюсь
+                  </a>
+                </h3>
+
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини 1980&nbsp;-&nbsp;1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--right">
+              <a href="#" class="event__photo event__photo--right">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="./images/event2-desktopL.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="./images/event2-desktop.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="./images/event2-tablet.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="./images/event2-mobile.jpg"
+                    alt="Фотографія події"
+                    >
+                </picture>
+              </a>
+
+              <div class="event__info event__info--right">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    І спогади і мрії
+                  </a>
+                </h3>
+
+                <p class="event__text">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <article class="events__item events__item--center">
+          <a href="#" class="event__photo event__photo--center">
+            <picture>
+              <source
+                media="(min-width: 1920px)"
+                srcset="images/event3-desktopL.jpg"
+              >
+              <source
+                media="(min-width: 1280px)"
+                srcset="images/event3-desktop.jpg"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="images/event3-tablet.jpg"
+              >
+              <img
+                class="event__img"
+                src="images/event3-mobile.jpg"
+                alt="Фотографія події"
+                >
+            </picture>
+          </a>
+
+          <div class="event__info event__info--center">
+            <div class="event__box event__box--center">
+              <p class="event__type">Лекція</p>
+              <p class="event__date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="event__title">
+              <a href="#" class="event__link">
+                Від класицизму до романтизму
+              </a>
+            </h3>
+          </div>
+        </article>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
