--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__hamburger-wrapper">
+        <div class="header__hamburger"></div>
+        <p class="header__side">ПОДІЇ</p>
+      </div>
+      <a href="#" class="header__logo">NA<br>MU</a>
+      <div class="header__photo">
+        <h2 class="header__title">ХУДОЖ<span class="header__title--transparent">НІЙ</span><br>МУЗЕЙ</h2>
+        <div class="header__tickets-wrapper">
+          <p class="header__tickets">КВИТКИ</p>
+          <a class="header__link" href="#">
+            <div class="header__link-vector"></div>
+          </a>
+        </div>
+      </div>
+    </header>
+    <main class="content">
+      <section class="content__current current">
+        <h2 class="current__title">Актуальні події</h2>
+        <div class="current__event event">
+          <img src="./images/current1-big.png" alt="picture"
+            class="event__picture">
+          <div class="event__information">
+            <div class="event__top">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="event__name">Йду і повертаюсь</h3>
+            <p class="event__capture">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку — українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+        <div class="current__event event event--second">
+          <img src="./images/current2-big.png" alt="picture"
+            class="event__picture">
+          <div class="event__information">
+            <div class="event__top">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="event__name">І спогади і мрії</h3>
+            <p class="event__capture">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="lecture">
+        <div class="lecture__background">
+          <div class="lecture__card">
+            <div class="lecture__card-top">
+              <p class="lecture__type">ЛЕКЦІЯ</p>
+              <p class="lecture__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
