--- a/src/index.html
+++ b/src/index.html
@@ -14,50 +14,55 @@
 
   <body>
     <header class="header">
-      <div class="header__content">
-        <div class="header__top">
-          <div class="burger-menu">
-            <input type="checkbox" class="burger-menu__check-box"
-              id="check-menu">
-            <label class="burger-menu__label" for="check-menu"></label>
-            <nav class="nav burger-menu__nav">
-              <div class="nav__wrapper">
-                <ul class="nav__list">
-                  <li class="nav__item">
-                    <a href="#gallery" class="nav__link">Галерея</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#events" class="nav__link">Виставки та події</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#visiting" class="nav__link">Відвідування</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#friends" class="nav__link">Стати нашим другом</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#about-us" class="nav__link">Про нас</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#shop" class="nav__link">Магазин</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#blog" class="nav__link">Блог</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#contacts" class="nav__link">Контаки</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-          <a href="#" class="logo header__logo">
-            <img src="./images/header/NA MU.svg" alt="logo">
+      <div class="header__burger-menu">
+        <div class="burger-menu">
+          <input type="checkbox" class="burger-menu__check-box"
+            id="check-menu">
+          <label class="burger-menu__label" for="check-menu"></label>
+          <nav class="nav burger-menu__nav">
+            <div class="nav__wrapper">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#events" class="nav__link">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#visiting" class="nav__link">Відвідування</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#friends" class="nav__link">Стати нашим другом</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#about-us" class="nav__link">Про нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#shop" class="nav__link">Магазин</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#blog" class="nav__link">Блог</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link">Контаки</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <div class="header__events-wrapper">
+          <a href="#" class="header__events">
+            Події
           </a>
         </div>
-        <div class="header__main">
+      </div>
+      <div class="header__content">
+        <a href="#" class="logo header__logo">
+          <img src="./images/header/NA MU.svg" alt="logo">
+        </a>
+        <div class="header__content-block">
           <h1 class="header__title">
-            Худож<span class="">ній</span><br>
+            Худож<span class="header__title-transparent">ній</span><br>
             Музей
           </h1>
           <a href="#" class="header__button">
@@ -69,7 +74,7 @@
     <main class="main">
       <section class="main__events">
         <h2 class="main__events-title">Актуальні події</h2>
-        <div class="event event__first">
+        <div class="event event--first">
           <img
             src="./images/events/I go and come back.png"
             class="event__img"
@@ -95,7 +100,7 @@
             </p>
           </div>
         </div>
-        <div class="event event__second">
+        <div class="event event--second">
           <div class="event__description event__description--second">
             <div class="event__exhibition">
               <div class="event__exhibition-title">
@@ -123,8 +128,7 @@
           >
         </div>
       </section>
-
-      <section class="lecture lecture__wrapper">
+      <section class="lecture lecture--wrapper">
         <div class="lecture__content">
           <div class="lecture__info-wrapper">
             <div class="lecture__info">
@@ -141,8 +145,7 @@
           </div>
         </div>
       </section>
-
-      <section class="gallery gallery__wrapper">
+      <section class="gallery gallery--wrapper">
         <h2 class="gallery__title">
           Галерея
         </h2>
@@ -185,8 +188,7 @@
           <div class="gallery__dot"></div>
         </div>
       </section>
-
-      <section class="subscription subscription__wrapper">
+      <section class="subscription subscription--wrapper">
         <h2 class="subscription__title">
           Підписка
         </h2>
@@ -211,7 +213,120 @@
         </form>
       </section>
     </main>
-
+    <footer class="footer footer--wrapper">
+      <div class="footer__content">
+        <div class="footer__left-side">
+          <a href="#" class="footer__btn">
+            <img src="./images/footer/Vector.svg" alt="footer-btn">
+          </a>
+          <div class="footer__logos">
+            <img
+              src="./images/header/NA MU.svg"
+              class="footer__logo"
+              alt="logo"
+            >
+            <div class="footer__logo-socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                target="_blank"
+                rel="noopener"
+              >
+                <img src="./images/footer/Facebook.svg" alt="facebook">
+              </a>
+              <a
+                href="https://www.instagram.com/?hl=ru"
+                target="_blank"
+                rel="noopener"
+              >
+                <img src="./images/footer/instagram (3).svg" alt="instagram">
+              </a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__schedule">
+              <h4 class="footer__title">Графік роботи:</h4>
+              <ul class="footer__schedule-list">
+                <li class="footer__schedule-item">
+                  <strong>12:00 — 20:00</strong> середа
+                </li>
+                <li class="footer__schedule-item">
+                  <strong>12:00 — 20:00</strong> четвер
+                </li>
+                <li class="footer__schedule-item">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </li>
+                <li class="footer__schedule-item">
+                  <strong>11:00 — 19:00</strong> субота
+                </li>
+                <li class="footer__schedule-item">
+                  <strong>11:00 — 19:00</strong> неділя
+                </li>
+              </ul>
+              <p class="footer__schedule-extra">
+                Вихідні понеділок,<br>
+                вівторок<br>
+                Каса припиняє роботу<br>
+                за 1 годину<br>
+                до закриття музею
+              </p>
+            </div>
+            <div class="footer__contacts">
+              <h4 class="footer__title">Контакти:</h4>
+              <p class="footer__contacts-info">
+                <a
+                  href="https://goo.gl/maps/Cnh2hPvibbihGeZT6"
+                  class="footer__link"
+                >
+                  вул. М. Грушевського, 6;<br>
+                  Київ, 01001<br>
+                </a>
+                <a href="tel: +380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
+                <a href="tel: +380442787454" class="footer__link">факс +38 (044) 278-74-54 </a>
+                <a href="mailto:info@namu.kiev.ua" class="footer__link"> e-mail: info@namu.kiev.ua</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="footer__stick"></div>
+        <div class="footer__right-side">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#gal" class="footer__link">Галерея</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#events" class="footer__link">Виставки та події</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#sub" class="footer__link">Відвідування</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="#sub" class="footer__link">Стати нашим другом</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#header" class="footer__link">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a href="#sub" class="footer__link">Магазин</a>
+            </li>
+            <li class="footer__item">
+              <a href="#sub" class="footer__link">Блог</a>
+            </li>
+            <li class="footer__item">
+              <a href="#sub" class="footer__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__copyright">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+        <div class="footer__designer">
+          Designed by Zhyriada Marina
+        </div>
+      </div>
+    </footer>
   </body>
-
 </html>
