some form fixes

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <script type="text/javascript" src="scripts/main.js"></script>
     <header class="header" id="header">
       <nav class="nav header__nav">
         <input
@@ -39,12 +38,6 @@
           <label for="menu__search" class="menu__search-logo">
             <img src="./images/Search.svg" alt="search-logo">
           </label>
-          <input
-            type="search"
-            name="search"
-            id="menu__search"
-            class="menu__search"
-          >
         </div>
         <img
           src="./images/Logo.png"
@@ -120,9 +113,9 @@
             <h2 class="subscription__title">Підписка</h2>
             <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
             <form
-              class="subscription__form"
               action="#"
-              method="post"
+              method="GET"
+              class="subscription__form"
             >
               <input
                 class="subscription__input"
@@ -191,5 +184,6 @@
         <div class="footer__design">Designed by Zhyriada Marina</div>
       </div>
     </footer>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
