--- a/src/index.html
+++ b/src/index.html
@@ -13,51 +13,55 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__burger-menu">
         <div class="burger-menu">
           <input type="checkbox" class="burger-menu__check-box"
             id="check-menu">
           <label class="burger-menu__label" for="check-menu"></label>
           <nav class="nav burger-menu__nav">
-            <div class="nav__wrapper">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="#gallery" class="nav__link">Галерея</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#events" class="nav__link">Виставки та події</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#visiting" class="nav__link">Відвідування</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#friends" class="nav__link">Стати нашим другом</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#about-us" class="nav__link">Про нас</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#shop" class="nav__link">Магазин</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#blog" class="nav__link">Блог</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#contacts" class="nav__link">Контаки</a>
-                </li>
-              </ul>
-            </div>
+            <div class="nav__burger-menu-block"></div>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#visiting" class="nav__link">Відвідування</a>
+              </li>
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">Стати нашим другом</a>
+              </li>
+              <li class="nav__item">
+                <a href="#about-us" class="nav__link">Про нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#shop" class="nav__link">Магазин</a>
+              </li>
+              <li class="nav__item">
+                <a href="#blog" class="nav__link">Блог</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">Контаки</a>
+              </li>
+            </ul>
           </nav>
+          <img
+            src="./images/header/search.svg"
+            class="burger-menu__search"
+            alt="search"
+          >
         </div>
         <div class="header__events-wrapper">
-          <a href="#" class="header__events">
+          <a href="#events" class="header__events">
             Події
           </a>
         </div>
       </div>
       <div class="header__content">
-        <a href="#" class="logo header__logo">
+        <a href="#header" class="header__logo">
           <img src="./images/header/NA MU.svg" alt="logo">
         </a>
         <div class="header__content-block">
@@ -72,8 +76,8 @@
       </div>
     </header>
     <main class="main">
-      <section class="main__events">
-        <h2 class="main__events-title">Актуальні події</h2>
+      <section class="main__events" id="events">
+        <h2 class="title main__events-title">Актуальні події</h2>
         <div class="event event--first">
           <img
             src="./images/events/I go and come back.png"
@@ -101,6 +105,11 @@
           </div>
         </div>
         <div class="event event--second">
+          <img
+            src="./images/events/memories and dreams.png"
+            class="event__img"
+            alt="memories and dreams"
+          >
           <div class="event__description event__description--second">
             <div class="event__exhibition">
               <div class="event__exhibition-title">
@@ -121,14 +130,9 @@
               мрії».
             </p>
           </div>
-          <img
-            src="./images/events/memories and dreams.png"
-            class="event__img"
-            alt="memories and dreams"
-          >
         </div>
       </section>
-      <section class="lecture lecture--wrapper">
+      <section class="lecture lecture--wrapper" id="visiting">
         <div class="lecture__content">
           <div class="lecture__info-wrapper">
             <div class="lecture__info">
@@ -145,8 +149,8 @@
           </div>
         </div>
       </section>
-      <section class="gallery gallery--wrapper">
-        <h2 class="gallery__title">
+      <section class="gallery gallery--wrapper" id="gallery">
+        <h2 class="title gallery__title">
           Галерея
         </h2>
         <div class="gallery__pictures">
@@ -188,8 +192,8 @@
           <div class="gallery__dot"></div>
         </div>
       </section>
-      <section class="subscription subscription--wrapper">
-        <h2 class="subscription__title">
+      <section class="subscription subscription--wrapper" id="subscription">
+        <h2 class="title subscription__title">
           Підписка
         </h2>
         <div class="subscription__text">
@@ -213,18 +217,20 @@
         </form>
       </section>
     </main>
-    <footer class="footer footer--wrapper">
+    <footer class="footer footer--wrapper" id="contacts">
       <div class="footer__content">
         <div class="footer__left-side">
           <a href="#" class="footer__btn">
-            <img src="./images/footer/Vector.svg" alt="footer-btn">
+            <img
+              src="./images/footer/Vector.svg"
+              alt="footer-btn"
+              class="footer__btn-img"
+            >
           </a>
           <div class="footer__logos">
-            <img
-              src="./images/header/NA MU.svg"
-              class="footer__logo"
-              alt="logo"
-            >
+            <a href="#" class="footer__logo">
+              <img src="./images/header/NA MU.svg" alt="logo">
+            </a>
             <div class="footer__logo-socials">
               <a
                 href="https://uk-ua.facebook.com/"
@@ -291,30 +297,30 @@
         <div class="footer__right-side">
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="#gal" class="footer__link">Галерея</a>
+              <a href="#gallery" class="footer__link">Галерея</a>
             </li>
             <li class="footer__nav-item">
               <a href="#events" class="footer__link">Виставки та події</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#sub" class="footer__link">Відвідування</a>
+              <a href="#visiting" class="footer__link">Відвідування</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#sub" class="footer__link">Стати нашим другом</a>
+              <a href="#subscription" class="footer__link">Стати нашим другом</a>
             </li>
           </ul>
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="#header" class="footer__link">Про Нас</a>
+              <a href="#about-us" class="footer__link">Про Нас</a>
             </li>
             <li class="footer__item">
-              <a href="#sub" class="footer__link">Магазин</a>
+              <a href="#shop" class="footer__link">Магазин</a>
             </li>
             <li class="footer__item">
-              <a href="#sub" class="footer__link">Блог</a>
+              <a href="#blog" class="footer__link">Блог</a>
             </li>
             <li class="footer__item">
-              <a href="#sub" class="footer__link">Контакти</a>
+              <a href="#contacts" class="footer__link">Контакти</a>
             </li>
           </ul>
         </div>
