--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,198 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <input
+        type="checkbox"
+        class="header__checkbox"
+        id="checkbox"
+      >
+      <label for="checkbox" class="header__label">
+        <div class="header__label-burger"></div>
+        <div class="empty"></div>
+      </label>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Виставки та події</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Відвідування</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Стати нашим другом</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Про Нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Магазин</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Блог</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Контакти</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__logo"></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <div class="museum">
+        <div class="empty"></div>
+        <div class="museum__photo">
+          <div class="museum__photo-image"></div>
+          <a href="#" class="museum__photo-text">NA <br> MU</a>
+          <div class="museum__content">
+            <h1 class="museum__content-name">ХУДОЖ<span class="museum__content-name-opacity">НІЙ</span>
+              <br>
+              МУЗЕЙ
+            </h1>
+            <a href="" class="museum__content-button">КВИТКИ</a>
+          </div>
+        </div>
+      </div>
+      <section class="relevant">
+        <h2 class="relevant__title">Актуальні події</h2>
+        <div class="wrapper">
+          <img
+            src="photo/painting-1.jpg"
+            alt=""
+            class="wrapper__image"
+         >
+          <div class="wrapper__content">
+            <div class="wrapper__content-exhibition">ВИСТАВКА</div>
+            <h3 class="wrapper__content-title">Йду і повертаюсь</h3>
+            <p class="wrapper__content-about">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+        <div class="wrapper__second">
+          <div class="wrapper__content box1">
+            <div class="wrapper__content-exhibition">ВИСТАВКА</div>
+            <h3 class="wrapper__content-title" >І спогади і мрії</h3>
+            <p class="wrapper__content-about ">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+          <img
+            src="photo/painting-2.jpg"
+            alt=""
+            class="wrapper__image box2"
+          >
+        </div>
+      </section>
+    </main>
+    <section class="background">
+      <div class="background__image">
+        <a href="" class="background__container">
+          <div class="lection">
+            <div class="lection__text">Лекція</div>
+            <div class="lection__date">26/08/2019 - 11:00</div>
+          </div>
+          <h2 class="background__container-title">Від класицизму до <br> романтизму</h2>
+        </a>
+      </div>
+    </section>
+    <section class="gallery">
+      <h2 class="gallery__title">Галерея</h2>
+      <div class="gallery__wrapper">
+        <img
+          src="photo/painting-3.jpg"
+          alt=""
+          class="gallery__wrapper-image box3"
+        >
+        <img
+          src="photo/painting-4.jpg"
+          alt=""
+          class="gallery__wrapper-image"
+        >
+        <img
+          src="photo/1.jpg"
+          alt=""
+          class="gallery__wrapper-image image-visibility box4"
+        >
+      </div>
+      <div class="gallery__wrapper-2">
+        <img
+          src="photo/painting-5.jpg"
+          alt=""
+          class="gallery__wrapper-image"
+        >
+        <img
+          src="photo/painting-6.jpg"
+          alt=""
+          class="gallery__wrapper-image"
+        >
+        <img
+          src="photo/2.jpg"
+          alt=""
+          class="gallery__wrapper-image image-visibility"
+        >
+      </div>
+      <div class="slider">
+        <div class="slider__button"></div>
+        <div class="slider__button"></div>
+        <div class="slider__button"></div>
+        <div class="slider__button"></div>
+      </div>
+    </section>
+    <section class="subscribe">
+      <div class="subscribe__background">
+        <div class="container">
+          <h2 class="container__title">Підписка</h2>
+          <h3 class="container__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
+          <form action="get" class="form">
+            <input
+              type="search"
+              class="form__search"
+              placeholder="E-mail"
+              required
+            >
+            <button class="form__button">></button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__left">
+        <div class="icons">
+          <div class="icons__logo"></div>
+          <div class="icons__link">
+            <div class="icons__link-facebook"></div>
+            <div class="icons__link-insta"></div>
+          </div>
+        </div>
+        <div class="rota">
+        </div>
+        <div class="contacts"></div>
+      </div>
+      <div class="footer__right">
+        <div class="menu-1">
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+        <div class="menu-2">
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+      </div>
+      <div class="copy">
+        <div class="copy__left">Copyright © 2019. All Rights Reserved.</div>
+        <div class="copy__right">Designed by Zhyriada Marina</div>
+      </div>
+    </footer>
   </body>
 </html>
