--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,299 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="icon" href="images/namu.png">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/styles.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page">
+
+    <header class="header page__header" id="home">
+
+      <section class="header__content">
+        <div class="header__photo">
+          <h1 class="header__title">
+            Худож<span class="header__title-letters">ній</span><br>музей
+            <a
+              href="#"
+              target="_blank"
+              rel="noopener"
+              class="button header__button"
+            >
+              <span class="button__buy-arrow">
+                <img src="./images/arrow.svg" alt="buy-arrow">
+              </span>
+              <span class="button__buy-field">
+                квитки
+              </span>
+            </a>
+          </h1>
+        </div>
+      </section>
+
+      <div class="header__wrapper">
+        <input
+          type="checkbox"
+          class="header__checkbox"
+          id="burger-icon"
+        >
+
+        <div class="header__pannel">
+          <label for="burger-icon" class="header__burger-icon"></label>
+          <a href="#about-us">
+            <div class="header__logo-image" id="top"></div>
+          </a>
+          <!-- <div class="header__decor-text">
+            події
+          </div> -->
+        </div>
+
+        <nav class="nav header__nav">
+          <div class="nav__container">
+            <div class="nav__wrapper">
+              <a href="#" class="nav__lens-link">
+                <img
+                  src="images/vector.png"
+                  alt="lens"
+                  class="nav__lens"
+                >
+              </a>
+
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gallery">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#visit">Відвідування</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#be-friend">Стати нашим другом</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#about-us">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#shop">Магазин</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#blog">Блог</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#contacts">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+    </header>
+
+    <main class="main">
+      <section class="events main__events" id="events">
+        <h2 class="events__title">
+          Актуальні події
+        </h2>
+        <acticle class="exhibition events__exhibition">
+          <div class="exhibition__1">
+            <img
+              src="images/picture-1-1.png"
+              alt="lake-photo"
+              class="exhibition__photo"
+            >
+            <div class="exhibition__description exhibition__description--1">
+              <div class="exhibition__time">
+                <span class="exhibition__fact">виставка</span>
+                <span class="exhibition__date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="exhibition__title">
+                Йду і повертаюсь
+              </h3>
+              <p class="exhibition__narrative">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </acticle>
+
+        <acticle class="exhibition events__exhibition">
+          <div class="exhibition__2">
+            <div class="exhibition__description exhibition__description--2">
+              <div class="exhibition__time">
+                <span class="exhibition__fact">виставка</span>
+                <span class="exhibition__date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="exhibition__title">
+                І спогади і мрії
+              </h3>
+              <p class="exhibition__narrative">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+            <img
+              src="images/picture-1-2.png"
+              alt="girl-photo"
+              class="exhibition__photo"
+            >
+          </div>
+        </acticle>
+      </section>
+
+      <section class="middle-part">
+
+        <img
+          src="/images/picture-1-3.png"
+          alt="flamboyant-paints"
+          class="middle-part__image"
+        >
+
+        <div class="middle-part__description">
+          <span class="middle-part__fact">лекція</span>
+          <span class="middle-part__date">26/08/2019 - 11:00</span>
+          <h3 class="middle-part__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section class="gallery main__gallery" id="gallery">
+        <h2 class="title gallery__title">
+          Галерея
+        </h2>
+        <div class="pictures gallery__pictures">
+          <div class="pictures__row pictures__row--first">
+            <img src="/images/picture-2-1.png" alt="wedding">
+            <img src="/images/picture-2-2.png" alt="rustic-street">
+            <img src="/images/picture-2-3.png" alt="goose">
+          </div>
+          <div class="pictures__row pictures__row--second">
+            <img src="/images/picture-3-1.png" alt="park">
+            <img src="/images/picture-3-2.png" alt="sea">
+            <img src="/images/picture-3-3.png" alt="party">
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscribe subscribe" id="subscribe">
+        <h2 class="subscribe__heading">Підписка</h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form action="#" class="subscribe__form">
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+            id="subscribe__input"
+            required
+          >
+          <label for="subscribe__input">
+            <button type="submit" class="subscribe__button">
+              <img
+                src="./images/black-arrow.png"
+                class="button__arrow-subscr"
+                alt="arrow-logo"
+              >
+            </button>
+          </label>
+        </form>
+      </section>
+
+
+      <footer class="footer">
+        <div class="footer__container">
+          <div class="footer__media">
+            <a href="#" class="logo footer__logo">
+              <img src="./images/namu.png" alt="namu-logo">
+            </a>
+            <div class="footer__media-links">
+              <a href="https://facebook.com" class="footer__media-link">
+                <img
+                  src="./images/facebook-logo.png" alt="facebook-logo"
+                >
+              </a>
+              <a href="https://instagram.com" class="footer__media-link">
+                <img src="./images/instagram-logo.png" alt="instagram-logo">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__content">
+          <div class="footer__info">
+            <div class="footer__info-block">
+              <div class="footer__info-item">Графік роботи</div>
+              <div class="footer__info-item">
+                <span class="footer__time">12:00 — 20:00</span> середа <br>
+                <span class="footer__time">12:00 — 20:00</span> четвер <br>
+                <span class="footer__time">12:00 — 20:00</span> п’ятниця <br>
+                <span class="footer__time">11:00 — 19:00</span> субота <br>
+                <span class="footer__time">11:00 — 19:00</span> неділя
+              </div>
+              <div class="footer__info-item">
+                <span class="footer__time">Вихідні:</span> понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+              </div>
+            </div>
+
+            <div class="footer__info-block">
+              <div class="footer__info-item">Контакти:</div>
+              <div class="footer__info-item">
+                <a href="https://goo.gl/maps/e7QXeKQ662VJYVi77" class="footer__info-link">
+                  вул. М. Грушевського,6; <br>
+                  Київ, 01001
+                </a> <br>
+                <a href="tel:+380442781357" class="footer__info-link">тел. +38 (044) 278-13-57</a> <br>
+                <a href="fax:+380442787454" class="footer__info-link">факс +38 (044) 278-74-54</a> <br>
+                <a href="mailto:info@namu.kiev.ua" class="footer__info-link">e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="footer-nav">
+            <ul class="footer-nav__list" >
+              <li class="footer-nav__list-item">
+                <a href="#gallery" class="footer-nav__link">Галерея</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#footer" class="footer-nav__link">Про Нас</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#actual" class="footer-nav__link">Виставки та події</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#gallery" class="footer-nav__link">Магазин</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#footer" class="footer-nav__link">Відвідування</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#actual" class="footer-nav__link">Блог</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#subscribe" class="footer-nav__link">Стати нашим другом</a>
+              </li>
+              <li class="footer-nav__list-item">
+                <a href="#footer" class="footer-nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div> -->
+        </div>
+      </div>
+      </footer>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
