--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body id="home">
+  <body>
     <header class="header">
       <div class="header__container container">
         <div class="header__wrapper">
@@ -94,7 +94,7 @@
     </header>
 
     <main class="main-page">
-      <section class="main-page__promo promo">
+      <section class="main-page__promo promo" id="home">
         <img
           src="./images/promo-bg.png"
           alt="Museum"
@@ -252,7 +252,242 @@
           </div>
         </article>
       </section>
+
+      <section class="main-page__gallery gallery" id="gallery">
+        <div class="gallery__container container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery1-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery2-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery3-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery4-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery5-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery6-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="main-page__subscription subscription">
+        <div class="subscription__container container">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            action="#"
+            class="subscription__form form"
+            method="POST"
+            name="subscription"
+          >
+            <input
+              type="email"
+              class="form__input"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button class="form__button"></button>
+          </form>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer-page footer">
+      <div class="footer__container container">
+        <div class="footer__inner">
+          <div class="footer__top">
+            <a href="#home" class="footer__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="Logo"
+              >
+            </a>
+            <div class="footer__socials socials">
+              <ul class="socials__list">
+                <li class="socials__item">
+                  <a
+                    class="socials__link"
+                    href="#"
+                  >
+                    <img
+                      class="socials__img"
+                      src="images/fb-icon.svg"
+                      alt="Посилання на сторінку музею в Facebook"
+                    >
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__link"
+                    href="#"
+                  >
+                    <img
+                      class="socials__img"
+                      src="images/insta-icon.svg"
+                      alt="Посилання на сторінку музею в Instagram"
+                    >
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__wrapper">
+            <div class="footer__info info">
+              <div class="info__box">
+                <h3 class="info__title">
+                  Графік роботи:
+                </h3>
+                <div class="info__text info__text--time">
+                  <p><span class="info__time">12:00 — 20:00 </span>середа</p>
+                  <p><span class="info__time">12:00 — 20:00 </span> четвер</p>
+                  <p><span class="info__time">12:00 — 20:00 </span>п’ятниця</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>субота</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>неділя</p>
+                </div>
+                <br>
+                <div class="info__text">
+                  <h3 class="info__title">
+                    Вихідні:
+                  </h3>
+                  <p>понеділок, вівторок.<br><br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+              </div>
+              <div class="info__box">
+                <h3 class="info__title" id="contacts">
+                  Контакти:
+                </h3>
+                <div class="info__text">
+                  <a class="info__link" href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4493621,30.5298855,17.76z/data=!4m5!3m4!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505">
+                    вул. М. Грушевського, 6<br>
+                    Київ, 01001
+                  </a>
+                  <br>
+                  <a class="info__link" href="tel:+380442781357">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <br>
+                  <a class="info__link" href="tel:+3804427874545">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <br>
+                  <a class="info__link" href="mailto:info@namu.kiev.ua">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="footer__info info">
+              <ul class="info__list">
+                <li class="info__item">
+                  <a href="#gallery" class="info__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#events" class="info__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Відвідування
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Стати нашим другом
+                  </a>
+                </li>
+              </ul>
+              <ul class="info__list">
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Магазин
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Блог
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#contacts"
+                    class="info__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer__copyright copyright">
+          <p class="copyright__text">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="copyright__text">
+            Copyright © 2021. All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
