--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
               src="images/close-icon.svg"
               alt="close"
             >
-            <ul class="nav__list">
+            <ul class="nav__list nav__list--close">
               <li class="nav__item">
                 <a href="#gallery" class="nav__link">
                   Галерея
@@ -49,27 +49,27 @@
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Відвідування
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Стати нашим другом
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Про Нас
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Магазин
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Блог
                 </a>
               </li>
@@ -307,7 +307,7 @@
           <form
             action="#"
             class="subscription__form form"
-            method="POST"
+            method="GET"
             name="subscription"
           >
             <input
@@ -340,7 +340,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__link"
-                    href="#"
+                    href="https://www.facebook.com/namu.museum/"
                   >
                     <img
                       class="socials__img"
@@ -352,7 +352,7 @@
                 <li class="socials__item">
                   <a
                     class="socials__link"
-                    href="#"
+                    href="https://instagram.com/namu.museum?igshid=7erp91t0u2vq"
                   >
                     <img
                       class="socials__img"
