no footer and mobile adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -21,56 +21,59 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="" class="nav__link">Галерея</a>
+            <label for="checkbox" class="nav__button">X</label>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Виставки та події</a>
+            <a href="#gallery" class="nav__link">Галерея</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Відвідування</a>
+            <a href="#relevant" class="nav__link">Виставки та події</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Стати нашим другом</a>
+            <a href="#lection" class="nav__link">Відвідування</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Про Нас</a>
+            <a href="#subscribe" class="nav__link">Стати нашим другом</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Магазин</a>
+            <a href="#footer" class="nav__link">Про Нас</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Блог</a>
+            <a href="#museum" class="nav__link">Магазин</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Контакти</a>
+            <a href="#" class="nav__link">Блог</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__logo"></a>
+            <a href="#footer" class="nav__link">Контакти</a>
+          </li>
+          <li class="nav__item">
+            <a href="#index.html" class="nav__logo"></a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="main">
-      <div class="museum">
+      <div class="museum" id="museum">
         <div class="empty"></div>
         <div class="museum__photo">
           <div class="museum__photo-image"></div>
-          <a href="#" class="museum__photo-text">NA <br> MU</a>
+          <a href="#index.html" class="museum__photo-text">NA <br> MU</a>
           <div class="museum__content">
             <h1 class="museum__content-name">ХУДОЖ<span class="museum__content-name-opacity">НІЙ</span>
               <br>
               МУЗЕЙ
             </h1>
-            <a href="" class="museum__content-button">КВИТКИ</a>
+            <a href="#" class="museum__content-button">КВИТКИ</a>
           </div>
         </div>
       </div>
-      <section class="relevant">
+      <section class="relevant" id="relevant">
         <h2 class="relevant__title">Актуальні події</h2>
         <div class="wrapper">
           <img
             src="photo/painting-1.jpg"
-            alt=""
+            alt="painting-1"
             class="wrapper__image"
          >
           <div class="wrapper__content">
@@ -87,15 +90,15 @@
           </div>
           <img
             src="photo/painting-2.jpg"
-            alt=""
+            alt="painting-2"
             class="wrapper__image box2"
           >
         </div>
       </section>
     </main>
-    <section class="background">
+    <section class="background" id="lection">
       <div class="background__image">
-        <a href="" class="background__container">
+        <a href="#" class="background__container">
           <div class="lection">
             <div class="lection__text">Лекція</div>
             <div class="lection__date">26/08/2019 - 11:00</div>
@@ -104,39 +107,39 @@
         </a>
       </div>
     </section>
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <h2 class="gallery__title">Галерея</h2>
       <div class="gallery__wrapper">
         <img
           src="photo/painting-3.jpg"
-          alt=""
+          alt="painting-3"
           class="gallery__wrapper-image box3"
         >
         <img
           src="photo/painting-4.jpg"
-          alt=""
+          alt="painting-4"
           class="gallery__wrapper-image"
         >
         <img
           src="photo/1.jpg"
-          alt=""
+          alt="painting-5"
           class="gallery__wrapper-image image-visibility box4"
         >
       </div>
       <div class="gallery__wrapper-2">
         <img
           src="photo/painting-5.jpg"
-          alt=""
+          alt="painting-6"
           class="gallery__wrapper-image"
         >
         <img
           src="photo/painting-6.jpg"
-          alt=""
+          alt="painting-7"
           class="gallery__wrapper-image"
         >
         <img
           src="photo/2.jpg"
-          alt=""
+          alt="painting-8"
           class="gallery__wrapper-image image-visibility"
         >
       </div>
@@ -147,7 +150,7 @@
         <div class="slider__button"></div>
       </div>
     </section>
-    <section class="subscribe">
+    <section class="subscribe" id="subscribe">
       <div class="subscribe__background">
         <div class="container">
           <h2 class="container__title">Підписка</h2>
@@ -164,36 +167,55 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <div class="footer__left">
-        <div class="icons">
-          <div class="icons__logo"></div>
-          <div class="icons__link">
-            <div class="icons__link-facebook"></div>
-            <div class="icons__link-insta"></div>
+    <footer class="footer" id="footer">
+      <div class="wrap">
+        <div class="wrap__left">
+          <div class="icons">
+            <a href="#" class="icons__logo"></a>
+            <div class="icons__link">
+              <a href="#" class="icons__link-facebook"></a>
+              <a href="#" class="icons__link-insta"></a>
+            </div>
+          </div>
+          <div class="rota">
+            <h3 class="rota__title">Графік роботи</h3>
+            <div class="rota__week">
+              <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> середа</span></div>
+              <div class="rota__week-time">12:00 — 20:00<span class="rota__week-time-day"> четвер</span></div>
+              <div class="rota__week-time">2:00 — 20:00<span class="rota__week-time-day"> п’ятниця</span></div>
+              <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> субота</span></div>
+              <div class="rota__week-time">11:00 — 19:00<span class="rota__week-time-day"> неділя</span></div>
+            </div>
+            <p class="rota__comment"> <span class="rota__comment-bold">Вихідні:</span> понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину <br> до закриття музею</p>
+          </div>
+          <div class="contacts">
+            <h3 class="contacts__text">Контакти:</h3>
+            <div class="contacts__details">
+              <a href="" class="contacts__details-info">вул. М. Грушевсько,6; <br class="contacts__details-info"> Київ, 01001 </a>
+              <a href="tel:+380442781357" class="contacts__details-info"> тел. +38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+              <a href="https://www.google.com/intl/ru/gmail/about/" class="contacts__details-info"> e-mail: info@namu.kiev.ua</a>
+            </div>
           </div>
         </div>
-        <div class="rota">
-        </div>
-        <div class="contacts"></div>
-      </div>
-      <div class="footer__right">
-        <div class="menu-1">
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-        </div>
-        <div class="menu-2">
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+        <div class="wrap__border"></div>
+        <div class="wrap__right">
+          <div class="menu">
+            <a href="#gallery" class="menu__link">Галерея</a>
+            <a href="#relevant" class="menu__link">Вистаки та події</a>
+            <a href="#lection" class="menu__link">Відвідування</a>
+            <a href="#lection" class="menu__link">Стати нашим другом</a>
+          </div>
+          <div class="menu">
+            <a href="#footer" class="menu__link">Про Нас</a>
+            <a href="#footer" class="menu__link">Магазин</a>
+            <a href="#footer" class="menu__link">Блог</a>
+            <a href="#footer" class="menu__link">Контакти</a>
+          </div>
         </div>
       </div>
       <div class="copy">
-        <div class="copy__left">Copyright © 2019. All Rights Reserved.</div>
-        <div class="copy__right">Designed by Zhyriada Marina</div>
+        <div class="copy__text1">Copyright © 2019. All Rights Reserved.</div>
+        <div class="copy__text2">Designed by Zhyriada Marina</div>
       </div>
     </footer>
   </body>
